# PrusaSlicer

./: .gitignore  BuildLinux.sh  BuildMacOS.sh  CHANGELOG.md  CMakeLists.txt  README.md  build.bat  build.sh  build_deps.bat  build_deps.sh  build_stubs.py  build_win.bat  create_release.py  mk  version.inc  winInstaller.wxs
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_form.yml
.github/workflows/: ccpp_mac.yml  ccpp_mac_arm.yml  ccpp_mac_arm_debug.yml  ccpp_mac_arm_rc.yml  ccpp_mac_debug.yml  ccpp_mac_rc.yml  ccpp_ubuntu_gtk2.yml  ccpp_ubuntu_gtk2_debug.yml  ccpp_ubuntu_gtk2_rc.yml  ccpp_ubuntu_gtk3.yml  ccpp_ubuntu_gtk3_debug.yml  ccpp_ubuntu_gtk3_rc.yml  ccpp_win.yml  ccpp_win_debug.yml  ccpp_win_rc.yml
bundled_deps/: CMakeLists.txt
bundled_deps/admesh/: CMakeLists.txt
bundled_deps/glu-libtess/: CMakeLists.txt
bundled_deps/imgui/: CMakeLists.txt
bundled_deps/imgui/imgui/: imconfig.h
bundled_deps/int128/: Int128.hpp
bundled_deps/libigl/: CMakeLists.txt
bundled_deps/miniz/: CMakeLists.txt
bundled_deps/stb_truetype/: CMakeLists.txt  stb_truetype.h
cmake/modules/: DownloadGetPip.cmake  FindNLopt.cmake  FindOpenVDB.cmake  Findlibnoise.cmake  FindwxWidgets.cmake
doc/: How to create a vendor profiles.md
glad/include/GL/: glew.h
glad/include/glad/: gl.h
glad/src/: gl.c
resources/calibration/filament_flow/: filament_flow.html
resources/calibration/filament_pressure/: filament_pressure.html  point.3mf
resources/data/: hints.ini
resources/export/: HOW_TO_USE.txt
resources/export/samples/: ftps_upload.py  preFlight.py  save_and_upload.py  save_to_folder.py
resources/localization/: list.txt  preFlight.pot
resources/localization/be/: preFlight.mo  preFlight_be.po
resources/localization/ca/: preFlight.mo  preFlight_ca.po
resources/localization/cs/: preFlight.mo  preFlight_cs.po
resources/localization/de/: preFlight.mo  preFlight_de.po
resources/localization/en/: preFlight.mo  preFlight_en.po
resources/localization/es/: preFlight.mo  preFlight_es.po
resources/localization/fi/: preFlight.mo  preFlight_fi.po
resources/localization/fr/: preFlight.mo  preFlight_fr.po
resources/localization/hu/: preFlight.mo  preFlight_hu.po
resources/localization/it/: preFlight.mo  preFlight_it.po
resources/localization/ja/: preFlight.mo  preFlight_ja.po
resources/localization/ko_KR/: preFlight.mo  preFlight_ko_KR.po
resources/localization/nl/: preFlight.mo  preFlight_nl.po
resources/localization/pl/: preFlight.mo  preFlight_pl.po
resources/localization/pt_BR/: preFlight.mo  preFlight_pt_BR.po
resources/localization/ru/: preFlight.mo  preFlight_ru.po
resources/localization/sl/: preFlight.mo  preFlight_sl.po
resources/localization/tr/: preFlight.mo  preFlight_tr.po
resources/localization/uk/: preFlight.mo  preFlight_uk.po
resources/localization/wx_locale/: be.po  ca.po  cs.po  de.po  es.po  fi.po  fr.po  hu.po  it.po  ja.po  ko_KR.po  nl.po  pl.po  pt_BR.po  ru.po  sl.po  tr.po  uk.po  zh_CN.po  zh_TW.po
resources/localization/zh_CN/: preFlight.mo  preFlight_zh_CN.po
resources/localization/zh_TW/: preFlight.mo  preFlight_zh_TW.po
resources/preprocessor/: HOW_TO_USE.txt  preFlight.py
resources/preprocessor/samples/: accel_by_feature.py  adaptive_pressure_advance.py  api_test.py  edge_slowdown.py  extrusion_multiplier.py  fan_curves.py  first_layer_tuner.py  flow_limiter.py  jerk_by_feature.py  m73_progress.py  motion_optimizer.py  multi_material_purge.py  numpy_analysis.py  overhang_optimizer.py  preFlight.py  pressure_advance.py  print_analyzer.py  retraction_optimizer.py  small_area_flow.py  temperature_tower.py
resources/themes/: ayu-dark.json  ayu-light.json  ayu-mirage.json  bluloco-light.json  catppuccin-frappe.json  catppuccin-latte.json  catppuccin-macchiato.json  catppuccin-mocha.json  cobalt2.json  cyberpunk-neon.json  dracula.json  everforest-dark.json  everforest-light.json  github-light.json  gruvbox-dark.json  gruvbox-light.json  light-owl.json  material-lighter.json  material.json  matrix.json  modus-operandi.json  monokai.json  night-owl.json  noctis-lux.json  nord.json  one-dark-pro.json  one-light.json  papercolor-light.json  quiet-light.json  rose-pine-dawn.json  rose-pine-moon.json  rose-pine.json  solarized-dark.json  solarized-light.json  synthwave-84.json  tokyo-night-light.json  tokyo-night-storm.json  tokyo-night.json  tomorrow.json  tron.json
src/: CMakeLists.txt  PrusaSlicer.cpp  PrusaSlicer_app_msvc.cpp
src/CLI/: GuiParams.cpp  PrintHelp.cpp  ProcessActions.cpp  ProfilesSharingUtils.cpp  Setup.cpp
src/admesh/: CMakeLists.txt  stl.h
src/avrdude/: CMakeLists.txt
src/clipper/: CMakeLists.txt
src/clipper2/: CMakeLists.txt
src/exif/: CMakeLists.txt
src/imgui/: CMakeLists.txt
src/jpeg-compressor/: CMakeLists.txt
src/libslic3r/: AppConfig.cpp  AppConfig.hpp  BoundingBox.cpp  BoundingBox.hpp  BridgeDetector.cpp  BridgeDetector.hpp  Brim.cpp  BuildVolume.cpp  CMakeLists.txt  ClipperUtils.cpp  ClipperUtils.hpp  ColorDithering.cpp  ColorDithering.hpp  ColorMixer.cpp  ColorMixer.hpp  Config.cpp  Config.hpp  CpuAffinity.cpp  CpuAffinity.hpp  CustomGCode.hpp  CutSurface.cpp  EdgeGrid.cpp  EdgeGrid.hpp  ElephantFootCompensation.cpp  Emboss.cpp  Emboss.hpp  EmbossShape.hpp  EngineGuard.hpp  ExPolygon.cpp  ExPolygon.hpp  ExtrusionEntity.cpp  ExtrusionEntity.hpp  ExtrusionRole.cpp  ExtrusionRole.hpp  ExtrusionSimulator.cpp  FilamentOptics.hpp  FileReader.cpp  FileReader.hpp  Flow.cpp  Flow.hpp  (+94 more)
src/libvgcode/: CMakeLists.txt
src/occt_wrapper/: CMakeLists.txt  OCCTWrapper.cpp  OCCTWrapper.hpp
src/platform/: download_vendor_bundles.py
src/qoi/: CMakeLists.txt
src/slic3r/: CMakeLists.txt  StackWalker.cpp  pchheader.hpp
src/test-utils/: CMakeLists.txt  convert_config.cpp
src/test-utils/ClipboardXX/include/detail/linux/xcb/: xcb.hpp
tests/libslic3r/: test_emboss.cpp  test_point.cpp
tests/sla_print/: sla_test_utils.hpp
tests/slic3rutils/: CMakeLists.txt
tests/superslicerlibslic3r/: test_clipper_utils.cpp  test_geometry.cpp  test_perimeter_generator.cpp  test_thin.cpp
(+408 files in other folders)
